# sw_lab

./: .gitlab-ci.yml  CMakeLists.txt  README.md  format-code.sh
geometry2d/: CMakeLists.txt
geometry2d/include/: angle.h  circle.h  geo_compare.h  line.h  point.h  pose.h
geometry2d/src/: angle.cpp  circle.cpp  geo_compare.cpp  line.cpp  point.cpp  pose.cpp
test/geometry2d/: angle_test.cpp  circle_test.cpp  geo_compare_test.cpp  line_test.cpp  point_test.cpp  pose_test.cpp
test/util/: compare_test.cpp
util/: CMakeLists.txt
util/include/: compare.h
util/src/: compare.cpp
